--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,22 @@
 {% extends "layout.html" %}
 {% block body %}
+
+
 <!-- banner images slider -->
 
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="static/1.jpg" class="d-block w-100" alt="hoodie image">
-    </div>
-    <div class="carousel-item" active>
-      <img src="static/2.jpg" class="d-block w-100" alt="pants image">
+      <img id="banner" src="static/1.jpg" style="width: 100%; height:350px; background-size: cover;"  alt="hoodie image">
     </div>
     <div class="carousel-item active">
-      <img src="static/3.jpg" class="d-block w-100" alt="shirts image">
+      <img id="banner" src="static/2.jpg" style="width: 100%; height:350px; background-size: cover;"  alt="pants image">
     </div>
-    <div class="carousel-item" active>
-      <img src="static/4.jpg" class="d-block w-100" alt="shirts image">
+    <div class="carousel-item active">
+      <img id="banner" src="static/3.jpg" style="width: 100%; height:350px; background-size: cover;"  alt="shirts image">
+    </div>
+    <div class="carousel-item active">
+      <img id="banner" src="static/4.jpg" style="width: 100%; height:350px; background-size: cover;"  alt="shirts image">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
